--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" type="text/css" href="./libs/css/styles.css" />
 
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis&display=swap" rel="stylesheet">
+
     <title>Gazetteer</title>
     <link href="./libs/images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
@@ -72,16 +77,8 @@
                     <table class="table">
                         <tbody>
                             <tr>
-                                <th>Currency:</th>
-                                <td id="currency"></td>
-                            </tr>
-                            <tr>
-                                <th>Calling Code:</th>
-                                <td id="calling_code"></td>
-                            </tr>
-                            <tr>
-                                <th>Coordinates:</th>
-                                <td id="coord"></td>
+                                <th>Capital:</th>
+                                <td id="capital"></td>
                             </tr>
                             <tr>
                                 <th>Continent:</th>
@@ -92,27 +89,35 @@
                                 <td id="flag"></td>
                             </tr>
                             <tr>
-                                <th>Capital:</th>
-                                <td id="capital"></td>
-                            </tr>
-                            <tr>
-                                <th>Population:</th>
-                                <td id="population"></td>
-                            </tr>
-                            <tr>
-                                <th id="currencyExchange"></th>
-                                <td>
-                                  <ul id="excRateList">
-                                    <li id="usd"></li>
-                                    <li id="gbp"></li>
-                                    <li id="eur"></li>
-                                  </ul>
-                                </td>
-                            </tr>
-                            <tr>
                                 <th>Current Temperature:</th>
                                 <td id="weather"></td>
                             </tr>
+                            <tr>
+                                <th>Currency:</th>
+                                <td id="currency"></td>
+                            </tr>
+                            <tr>
+                              <th id="currencyExchange"></th>
+                              <td>
+                                  <ul id="excRateList">
+                                      <li id="usd"></li>
+                                      <li id="gbp"></li>
+                                      <li id="eur"></li>
+                                  </ul>
+                              </td>
+                          </tr>
+                            <tr>
+                                <th>Calling Code:</th>
+                                <td id="calling_code"></td>
+                            </tr>
+                            <tr>
+                                <th>Coordinates:</th>
+                                <td id="coord"></td>
+                            </tr>                                                                                   
+                            <tr>
+                                <th>Population:</th>
+                                <td id="population"></td>
+                            </tr>                                                        
                             <tr>
                                 <th>Wikipedia URL:</th>
                                 <td id="wikiUrl"></td>
