--- a/index.html
+++ b/index.html
@@ -70,8 +70,13 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
+                  <div id="modalTitle">
                     <h5 class="modal-title" id="country"></h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div id="modalFlag">
+                    <span class="flag" id="flag"></span>
+                  </div>
+                    <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
                 </div>
                 <div class="modal-body">
                     <table class="table">
@@ -83,10 +88,6 @@
                             <tr>
                                 <th>Continent:</th>
                                 <td id="continent"></td>
-                            </tr>
-                            <tr>
-                                <th>Flag:</th>
-                                <td id="flag"></td>
                             </tr>
                             <tr>
                                 <th>Current Temperature:</th>
@@ -132,7 +133,7 @@
                     </table>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="modalButton">Close</button>
                 </div>
             </div>
         </div>
