--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            Country List
+                            <span id="country">Country List</span>
                         </a>
                         <select class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink"
                             id="sel_country" size="6">
@@ -71,7 +71,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                   <div id="modalTitle">
-                    <h5 class="modal-title" id="country"></h5>
+                    <h5 class="modal-title" id="countryName"></h5>
                   </div>
                   <div id="modalFlag">
                     <span class="flag" id="flag"></span>
