--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 </head>
 
 <body>
+    <div id="loading">
+      <img id="loading-image" src="./libs/images/preloader.gif" alt="Loading..." />
+    </div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navBar">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Gazetteer</a>
