--- a/index.html
+++ b/index.html
@@ -18,15 +18,17 @@
     <!-- Leaflet JavaScript -->
     <script src="./vendors/js/leaflet.js"></script>
 
-    <!-- clustering -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css" >
-    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css" >
-    <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
+    <!-- Clustering css -->
+    <link rel="stylesheet" type="text/css" href="./vendors/css/MarkerCluster.css" >
+    <link rel="stylesheet" type="text/css" href="./vendors/css/MarkerCluster.Default.css" >
+
+    <!-- Clustering js -->
+    <script src="./vendors/js/leaflet.markercluster.js"></script>
 
     <!-- Stylesheet -->
     <link rel="stylesheet" type="text/css" href="./libs/css/styles.css" />
 
-    <!-- Font -->
+    <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dosis&display=swap" rel="stylesheet">
