--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </nav>
     <div id="mapid">
     </div>
-    <footer>
+    <footer class="footer">
       <div>Icons made by <a href="https://www.flaticon.com/authors/fjstudio" title="fjstudio">fjstudio</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
       <div>Icons made by <a href="" title="photo3idea_studio">photo3idea_studio</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     </footer>
@@ -93,7 +93,6 @@
                   <div id="modalFlag">
                     <span class="flag" id="flag"></span>
                   </div>
-                    <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
                 </div>
                 <div class="modal-body">
                     <table class="table">
@@ -107,7 +106,7 @@
                                 <td id="continent"></td>
                             </tr>
                             <tr>
-                                <th>Current Temperature:</th>
+                                <th>Average Temperature:</th>
                                 <td id="weather"></td>
                             </tr>
                             <tr>
